# controllers/Exposicao.js
@@ -1,10 +1,10 @@
 'use strict';
 
 var utils = require('../utils/writer.js');
-var Exposio = require('../service/ExposioService');
+var Exposicao = require('../service/ExposicaoService');
 
 module.exports.adicionarMiniaturaExposicao = function adicionarMiniaturaExposicao (req, res, next, body, expoId) {
-  Exposio.adicionarMiniaturaExposicao(body, expoId)
+  Exposicao.adicionarMiniaturaExposicao(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -14,7 +14,7 @@ module.exports.adicionarMiniaturaExposicao = function adicionarMiniaturaExposica
 };
 
 module.exports.atualizarExposicao = function atualizarExposicao (req, res, next, body, expoId) {
-  Exposio.atualizarExposicao(body, expoId)
+  Exposicao.atualizarExposicao(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -24,7 +24,7 @@ module.exports.atualizarExposicao = function atualizarExposicao (req, res, next,
 };
 
 module.exports.atualizarExposicao = function atualizarExposicao (req, res, next, body, expoId) {
-  Exposio.atualizarExposicao(body, expoId)
+  Exposicao.atualizarExposicao(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -34,7 +34,7 @@ module.exports.atualizarExposicao = function atualizarExposicao (req, res, next,
 };
 
 module.exports.atualizarPainel = function atualizarPainel (req, res, next, body, expoId, painelId) {
-  Exposio.atualizarPainel(body, expoId, painelId)
+  Exposicao.atualizarPainel(body, expoId, painelId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -44,7 +44,7 @@ module.exports.atualizarPainel = function atualizarPainel (req, res, next, body,
 };
 
 module.exports.atualizarPainel = function atualizarPainel (req, res, next, body, expoId, painelId) {
-  Exposio.atualizarPainel(body, expoId, painelId)
+  Exposicao.atualizarPainel(body, expoId, painelId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -54,7 +54,7 @@ module.exports.atualizarPainel = function atualizarPainel (req, res, next, body,
 };
 
 module.exports.buscarExposicoesPublicadas = function buscarExposicoesPublicadas (req, res, next, pagina, quantidade) {
-  Exposio.buscarExposicoesPublicadas(pagina, quantidade)
+  Exposicao.buscarExposicoesPublicadas(pagina, quantidade)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -64,7 +64,7 @@ module.exports.buscarExposicoesPublicadas = function buscarExposicoesPublicadas 
 };
 
 module.exports.carregarExposicaoPorId = function carregarExposicaoPorId (req, res, next, expoId) {
-  Exposio.carregarExposicaoPorId(expoId)
+  Exposicao.carregarExposicaoPorId(expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -74,21 +74,7 @@ module.exports.carregarExposicaoPorId = function carregarExposicaoPorId (req, re
 };
 
 module.exports.carregarPainelPorId = function carregarPainelPorId (req, res, next, expoId, painelId) {
-  Exposio.carregarPainelPorId(expoId, painelId)
-    .then(function (response) {
-      if (response) {
-        utils.writeJson(res, response);
-      } else {
-        utils.respondWithCode(404);
-      }
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.criarPainel = function criarPainel (req, res, next, body, expoId) {
-  Exposio.criarPainel(body, expoId)
+  Exposicao.carregarPainelPorId(expoId, painelId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -98,7 +84,17 @@ module.exports.criarPainel = function criarPainel (req, res, next, body, expoId)
 };
 
 module.exports.criarPainel = function criarPainel (req, res, next, body, expoId) {
-  Exposio.criarPainel(body, expoId)
+  Exposicao.criarPainel(body, expoId)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.criarPainel = function criarPainel (req, res, next, body, expoId) {
+  Exposicao.criarPainel(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -108,7 +104,7 @@ module.exports.criarPainel = function criarPainel (req, res, next, body, expoId)
 };
 
 module.exports.denunciarExposicao = function denunciarExposicao (req, res, next, body, expoId) {
-  Exposio.denunciarExposicao(body, expoId)
+  Exposicao.denunciarExposicao(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -118,7 +114,7 @@ module.exports.denunciarExposicao = function denunciarExposicao (req, res, next,
 };
 
 module.exports.denunciarExposicao = function denunciarExposicao (req, res, next, body, expoId) {
-  Exposio.denunciarExposicao(body, expoId)
+  Exposicao.denunciarExposicao(body, expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -128,7 +124,7 @@ module.exports.denunciarExposicao = function denunciarExposicao (req, res, next,
 };
 
 module.exports.excluirPainel = function excluirPainel (req, res, next, expoId, painelId) {
-  Exposio.excluirPainel(expoId, painelId)
+  Exposicao.excluirPainel(expoId, painelId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -138,7 +134,7 @@ module.exports.excluirPainel = function excluirPainel (req, res, next, expoId, p
 };
 
 module.exports.organizarExposicao = function organizarExposicao (req, res, next, body) {
-  Exposio.organizarExposicao(body)
+  Exposicao.organizarExposicao(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -148,7 +144,7 @@ module.exports.organizarExposicao = function organizarExposicao (req, res, next,
 };
 
 module.exports.organizarExposicao = function organizarExposicao (req, res, next, body) {
-  Exposio.organizarExposicao(body)
+  Exposicao.organizarExposicao(body)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -158,7 +154,7 @@ module.exports.organizarExposicao = function organizarExposicao (req, res, next,
 };
 
 module.exports.removerExposicao = function removerExposicao (req, res, next, expoId) {
-  Exposio.removerExposicao(expoId)
+  Exposicao.removerExposicao(expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -168,7 +164,7 @@ module.exports.removerExposicao = function removerExposicao (req, res, next, exp
 };
 
 module.exports.removerMiniaturaExposicao = function removerMiniaturaExposicao (req, res, next, expoId) {
-  Exposio.removerMiniaturaExposicao(expoId)
+  Exposicao.removerMiniaturaExposicao(expoId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
